<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>The obstacle_avoidance package</description>

  <maintainer email="ink796@gmail.com">Nedim Hosic</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/obstacle_avoidance</url> -->

  <!-- <author email="ink796@gmail.com">Nedim Hosic</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
